<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.contact.Contact">

    <RelativeLayout
        android:id="@+id/contactRellay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/antic"
            android:text="@string/contact_mechanic"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp">

        </TextView>

        <LinearLayout
            android:id="@+id/contactlinear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textContact"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_address_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/et_bg"
                android:hint="@string/input_recipient_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonDirections"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:text="@string/directions"
                android:textAllCaps="false"
                android:textColor="#000000" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/antic"
                android:text="@string/describe_problem"
                android:textColor="#000000"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/subject_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/et_bg"
                android:hint="@string/enter_subject"
                android:inputType="textEmailSubject"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:autofillHints="@string/enter_subject" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="top"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:gravity="top"
                android:hint="@string/describe_your_problem"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#000"
                android:textSize="15sp"
                android:autofillHints="@string/describe_your_problem"
                android:inputType="text" />

            <RelativeLayout
                android:id="@+id/contactlinear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_email_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/et_bg"
                    android:text="@string/send_email"
                    android:textAllCaps="false"
                    android:textColor="#000000" />


                <Button
                    android:id="@+id/call_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/et_bg"
                    android:text="@string/call"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/get_pin_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="135dp"
                    android:background="@drawable/et_bg"
                    android:text="@string/get_pin"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>