<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".activities.credentials.frags.RegisterShopFragment">

    <EditText
        android:id="@+id/shop_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="shop_name"
        android:hint="@string/enter_shop_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/shop_location_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:autofillHints="location"
        android:hint="@string/enter_shop_location"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_name_et" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="@+id/shop_location_et"
        app:layout_constraintStart_toStartOf="@+id/shop_location_et"
        app:layout_constraintTop_toBottomOf="@+id/shop_location_et" />

</androidx.constraintlayout.widget.ConstraintLayout>